--- a/MLKitDocumentScanner/MLKitDocumentScanner/MLKitDocumentScanner.csproj
+++ b/MLKitDocumentScanner/MLKitDocumentScanner/MLKitDocumentScanner.csproj
@@ -26,7 +26,7 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageVersion>16.0.0-beta1</PackageVersion>
+    <PackageVersion>16.0.0</PackageVersion>
     <NeutralLanguage>en-US</NeutralLanguage>
     <PackageTags>MLKit; document; scanning; android</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -52,26 +52,26 @@
   <ItemGroup>
     <AndroidMavenLibrary
       Include="com.google.android.gms:play-services-mlkit-document-scanner"
-      Version="16.0.0-beta1"
+      Version="16.0.0"
       Repository="Google" />
 
     <AndroidNamespaceReplacement
-      Include='com.google.mlkit.vision.documentscanner'
-      Replacement='Net.Google.MLKit.Vision.DocumentScanner' />
+      Include="com.google.mlkit.vision.documentscanner"
+      Replacement="Net.Google.MLKit.Vision.DocumentScanner" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.AndroidX.Activity" Version="1.10.1.2" />
-    <PackageReference Include="Xamarin.Firebase.Components" Version="118.0.1.4" />
-    <PackageReference Include="Xamarin.Firebase.Encoders" Version="117.0.0.22" />
-    <PackageReference Include="Xamarin.Firebase.Encoders.JSON" Version="118.0.1.14" />
-    <PackageReference Include="Xamarin.Google.Android.DataTransport.TransportApi" Version="4.0.0.4" />
-    <PackageReference Include="Xamarin.Google.Android.DataTransport.TransportBackendCct" Version="4.0.0.4" />
-    <PackageReference Include="Xamarin.Google.Android.DataTransport.TransportRuntime" Version="4.0.0.4" />
-    <PackageReference Include="Xamarin.Google.MLKit.Common" Version="118.11.0.4" />
-    <PackageReference Include="Xamarin.GooglePlayServices.Base" Version="118.7.0.2" />
-    <PackageReference Include="Xamarin.GooglePlayServices.Basement" Version="118.7.0.2" />
-    <PackageReference Include="Xamarin.GooglePlayServices.Tasks" Version="118.3.0.2" />
+    <PackageReference Include="Xamarin.AndroidX.Activity" Version="1.10.1.3" />
+    <PackageReference Include="Xamarin.Firebase.Components" Version="119.0.0.1" />
+    <PackageReference Include="Xamarin.Firebase.Encoders" Version="117.0.0.23" />
+    <PackageReference Include="Xamarin.Firebase.Encoders.JSON" Version="118.0.1.15" />
+    <PackageReference Include="Xamarin.Google.Android.DataTransport.TransportApi" Version="4.0.0.5" />
+    <PackageReference Include="Xamarin.Google.Android.DataTransport.TransportBackendCct" Version="4.0.0.5" />
+    <PackageReference Include="Xamarin.Google.Android.DataTransport.TransportRuntime" Version="4.0.0.5" />
+    <PackageReference Include="Xamarin.Google.MLKit.Common" Version="118.11.0.5" />
+    <PackageReference Include="Xamarin.GooglePlayServices.Base" Version="118.7.2.1" />
+    <PackageReference Include="Xamarin.GooglePlayServices.Basement" Version="118.7.1.1" />
+    <PackageReference Include="Xamarin.GooglePlayServices.Tasks" Version="118.3.2.1" />
   </ItemGroup>
 
 </Project>
